# negentropy

./: .gitignore  Dockerfile.debug  LICENSE  README.md  bootstrap-kube.sh  build.sh  build3.sh  deploy.yaml  dev-build.sh  docker-compose.debug.yml  docker-compose.kafka.yml  docker-compose.yml  docker-compose2.yml  flant_gitops.sh  run-e2e-tests.sh  run_e2e_tests.sh  run_e2e_tests_after_restart_vaults.sh  start-dev.sh  start.sh  start2.sh  start_debug.sh  stop-dev.sh  stop.sh  unseal.sh  werf.yaml  wrapper.sh
.helm/: Chart.yaml  requirements.yaml  values.yaml
authd/: README.md  client.go  client_test.go  go.mod  go.sum
cli/: README.md  go.mod  go.sum  main.go
docker/: Dockerfile.test-client  Dockerfile.test-server  Dockerfile.vault-debug  docker-compose.common.yml  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.single.yml  docker-compose.yml  wrapper.sh
server-access/server-access-nss/: Cargo.toml  Dockerfile  Makefile  README.md  build.sh  nss.go
server-access/server-access-nss/example/: run.sh  users.db
server-access/server-access-nss/lib/: libnss_flantauth.so.2
server-access/server-access-nss/src/: group.rs  lib.rs  passwd.rs  shadow.rs
server-access/server-access-nss/src/db/: mod.rs
server-access/server-access-nss/tests/: README.md
server-access/server-access-nss/tests/integration/: common.rs  mod.rs
server-access/server-access-nss/tests/integration/interface/: shadow.rs
server-access/server-access-nss/tests/integration/libc/: groups.rs  nss.rs  passwd.rs
server-access/server-access-nss/tests/integration/testdata/: db.sql
(+1624 files in other folders)
